--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "~53.0.12",
     "expo-constants": "~17.1.6",
+    "expo-font": "~13.3.1",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.0",
     "expo-status-bar": "~2.2.3",
@@ -19,8 +20,7 @@
     "react-native": "0.79.4",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.11.1",
-    "expo-font": "~13.3.1"
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
