--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "expo": "~53.0.12",
+    "@supabase/supabase-js": "^2.50.2",
+    "expo": "^53.0.13",
+    "expo-auth-session": "~6.2.0",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.0",
+    "expo-random": "^14.0.1",
+    "expo-router": "~5.1.1",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
