--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-auth-session": "~6.2.0",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
+    "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.5",
     "expo-random": "^14.0.1",
     "expo-router": "~5.1.1",
