--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/slider": "^4.5.7",
     "@supabase/supabase-js": "^2.50.2",
     "expo": "^53.0.13",
     "expo-auth-session": "~6.2.0",
+    "expo-camera": "^16.1.9",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-linear-gradient": "^14.1.5",
